# incribo

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  data.csv.zst  pyproject.toml  test-data.csv
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: proprietary_data.csv
docs/: getting_started.md
docs/examples/: basic_usage.py
examples/: basic_usage.py
src/: cron.rs  embeddings.rs  lib.rs  main.rs  main2.rs  mongodb.rs  read_csv.rs  test.py
src/incribo/: __init__.py  branch_manager.py  consistency_manager.py  dynamic_embeddings.py  history.py  version_control.py
tests/: test_drift_detection.py  test_embedding.py  test_version_control.py
