[package]
name = "embeddings_framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
zstd = "0.10.0+zstd.1.5.2"
rust-bert = "0.18.0"
tch = "0.7.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15"
mongodb = "2.2"
serde_json = "1.0"